--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1,3 +1,429 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+  @font-face {
+    font-family: 'Source Code Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('/fonts/Source-Code-Pro-Regular.woff2') format('woff2');
+  }
+
+  /* Latin */
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_W_Md.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_W_MdIt.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_W_SBd.woff2')
+      format('woff2');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_W_SBdIt.woff2')
+      format('woff2');
+    font-weight: 600;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_W_Bd.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_W_BdIt.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_W_Rg.woff2')
+      format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_W_It.woff2')
+      format('woff2');
+    font-weight: 400;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_W_Md.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_W_MdIt.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_W_Bd.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_W_BdIt.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: italic;
+    font-display: swap;
+  }
+
+  /* Arabic */
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Arbc_W_Md.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0600-06FF;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Arbc_W_SBd.woff2')
+      format('woff2');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0600-06FF;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Arbc_W_Bd.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0600-06FF;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Arbc_W_Rg.woff2')
+      format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0600-06FF;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Arbc_W_Md.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0600-06FF;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Arbc_W_Bd.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0600-06FF;
+  }
+
+  /* Cyrillic */
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Cyrl_W_Md.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0400-045F, U+2116;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Cyrl_W_SBd.woff2')
+      format('woff2');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0400-045F, U+2116;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Cyrl_W_Bd.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0400-045F, U+2116;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Cyrl_W_Rg.woff2')
+      format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0400-045F, U+2116;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Cyrl_W_Md.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0400-045F, U+2116;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Cyrl_W_Bd.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0400-045F, U+2116;
+  }
+
+  /* Devanagari */
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Deva_W_Md.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
+      U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Deva_W_SBd.woff2')
+      format('woff2');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
+      U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Deva_W_Bd.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
+      U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Deva_W_Rg.woff2')
+      format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
+      U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Deva_W_Md.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
+      U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Deva_W_Bd.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
+      U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+  }
+
+  /* Vietnamese */
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Viet_W_Md.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Viet_W_SBd.woff2')
+      format('woff2');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Display';
+    src: url('https://react.dev/fonts/Optimistic_Display_Viet_W_Bd.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Viet_W_Rg.woff2')
+      format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Viet_W_Md.woff2')
+      format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  }
+
+  @font-face {
+    font-family: 'Optimistic Text';
+    src: url('https://react.dev/fonts/Optimistic_Text_Viet_W_Bd.woff2')
+      format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  }
+
+  html,
+  body {
+    padding: 0;
+    margin: 0;
+  }
+
+  @media screen and (max-width: 1023px) {
+    body {
+      overflow-x: hidden;
+    }
+  }
+
+  /* Start purging... */
+  /* Force GPU Accelerated scrolling, credit: Twitter Lite */
+  .scrolling-gpu {
+    transform: translateZ(0);
+  }
+
+  @layer utilities {
+    .text-7xl {
+      font-size: 5rem;
+    }
+
+    .text-8xl {
+      font-size: 6rem;
+    }
+  }
+
+  details {
+    margin-bottom: 1rem;
+  }
+
+  table {
+    width: 100%;
+    margin-bottom: 1rem;
+    display: block;
+    overflow-x: auto;
+  }
+
+  table td,
+  table th {
+    padding: 0.75rem;
+    vertical-align: top;
+    border: 1px solid #dee2e6;
+    overflow: auto;
+  }
+
+  summary::-webkit-details-marker {
+    display: none;
+  }
+}
